[package]
name = "improc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
image = "0.24.4"
pixels = "0.9.0"
winit = "0.27"
winit_input_helper = "0.13"
kd-tree = "0.5.1"
typenum = "1.16.0"
crunchy = "0.2.2"